Add workshop: Multi-Cloud Apps with GraalVM - Up and Running